--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 asyncio = "^3.4.3"
+nodriver = "^0.47.0"
 openai-whisper = "^20250625.0.0"
 pandas = "^2.3.1"
 pillow = "^11.3.0"
-playwright = "^1.53.0"
 python = "^3.12"
 python-dotenv = "^1.1.1"
 requests = "^2.32.4"
