Add basic summarizer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 asyncio = "^3.4.3"
 langchain = "^0.3.26"
 langchain-core = "^0.3.69"
+langchain-openai = "^0.3.28"
 pandas = "^2.3.1"
 pillow = "^11.3.0"
 python = "^3.12"
