--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langchain-core = "^0.3.69"
 langchain-openai = "^0.3.28"
 pandas = "^2.3.1"
 pillow = "^11.3.0"
+pydantic = "^2.11.7"
 python = "^3.12"
 python-dotenv = "^1.1.1"
 requests = "^2.32.4"
