Add totp support

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-GOOGLE_EMAIL=
-GOOGLE_PASSWORD=
+GOOGLE_EMAIL= # Gmail email
+GOOGLE_PASSWORD= # Gmail password
+TOTP_SECRET= # Time based otp secret 2fa
 DOWNLOADS_FOLDER=./.temp/downloaded_files
 OPENAI_API_KEY=
