Lint and fix docker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,29 +14,32 @@ package-mode = false
 
 [tool.poetry.dependencies]
 asyncio = "^3.4.3"
-langchain = "^0.3.26"
-langchain-core = "^0.3.70"
+langchain = "^0.3.27"
+langchain-core = "^0.3.72"
 langchain-openai = "^0.3.28"
-numpy = "^2.3.1"
+numpy = "^2.3.2"
 pillow = "^11.3.0"
-pyautogui = "^0.9.54"
 pydantic = "^2.11.7"
 pyotp = "^2.9.0"
 python-dotenv = "^1.1.1"
-seleniumbase = "^4.40.6"
+seleniumbase = { extras = ["pyautogui"], version = "^4.40.6" }
 sounddevice = "^0.5.2"
 soundfile = "^0.13.1"
-streamlit = "^1.47.0"
+streamlit = "^1.47.1"
 torch = "^2.7.1"
-transformers = "^4.53.3"
+transformers = "^4.54.1"
 whisperx = "^3.4.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
 flake8 = "^7.3.0"
+isort = "^6.0.1"
 pytest = "^8.4.1"
 watchdog = "^6.0.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core"]
+
+[tool.isort]
+profile = "black"
